[gd_scene load_steps=6 format=3 uid="uid://h1e0casqiuy5"]

[ext_resource type="Script" path="res://scenes/ui/dungeon_detail/dungeon_info.gd" id="1_nc423"]
[ext_resource type="Texture2D" uid="uid://bqojl8sueufbo" path="res://assets/overworld/overworld_minus.png" id="2_pivq7"]
[ext_resource type="FontFile" uid="uid://din8mc4ob1pwl" path="res://assets/tiny5/Tiny5-Regular.ttf" id="3_s50rt"]
[ext_resource type="PackedScene" uid="uid://6fbuh03eitpr" path="res://scenes/ui/sound_button/sound_button.tscn" id="4_2dpij"]
[ext_resource type="Texture2D" uid="uid://b8s0lm7cmfo2x" path="res://assets/ui/pause_screen/tile_0043.png" id="5_ge4mw"]

[node name="DungeonInfo" type="PanelContainer"]
offset_right = 166.0
offset_bottom = 169.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_nc423")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HBoxContainer1" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="LocationName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_s50rt")
text = "LOCATION NAME
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="InfectionIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("2_pivq7")

[node name="InfectionLevel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"Header"
text = "INFECTION LEVEL"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ContinueButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_2dpij")]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Continue"

[node name="B" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("5_ge4mw")
